--- a/app/src/main/res/layout/fragment_about_sport.xml
+++ b/app/src/main/res/layout/fragment_about_sport.xml
@@ -11,19 +11,33 @@
 
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
-           android:layout_height="match_parent">
+           android:layout_height="wrap_content">
+           <LinearLayout
+               android:id="@+id/SpotrBrief"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="vertical">
+
+               <ImageView
+                   android:id="@+id/SportBrief_Image"
+                   android:layout_width="match_parent"
+                   android:layout_height="200dp"
+                   android:layout_marginTop="50dp"
+                   android:src="@drawable/body_building" />
+
+               <TextView
+                   android:id="@+id/SportBrief_Brief"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="20dp"
+                   android:layout_marginStart="10dp"
+                   android:layout_marginEnd="10dp"
+                   android:text="Bodybuilding"
+                   android:textColor="@color/ic_launcher_background"
+                   android:textSize="20sp"
+                   android:textStyle="bold" />
+           </LinearLayout>
        </androidx.core.widget.NestedScrollView>
-       <androidx.recyclerview.widget.RecyclerView
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:id="@+id/recycler_Aboute_sport"/>
-       <ProgressBar
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-           android:layout_centerVertical="true"
-           android:id="@+id/progres_About_Sorte"
-           android:visibility="gone"/>
    </RelativeLayout>
 
 
