--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shapetext_cardview"
+    android:background="@drawable/forget_pass"
     tools:context=".Fragment.ProfileFragment">
 
    <LinearLayout
@@ -35,7 +35,7 @@
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
-           app:civ_border_color="#FF000000"
+           app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />
 
        <LinearLayout
