--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="blue">#23A9E1</color>
     <color name="colorblack_4">#0A000000</color>
     <color name="forget_color">#5A5A5A</color>
+    <color name="test">#DAF3EFEF</color>
 
     <color name="color_button">#292562</color>
     <color name="color_white">#262262</color>
