--- a/app/src/main/res/layout/formate_exercise.xml
+++ b/app/src/main/res/layout/formate_exercise.xml
@@ -30,7 +30,7 @@
 
 
         <TextView
-            android:id="@+id/categories_Sports_name"
+            android:id="@+id/ESports_name"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
