--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -6,12 +6,14 @@
     android:background="@drawable/background_home"
     tools:context=".sport.SportsProperties.ExerciseFragment">
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.core.widget.NestedScrollView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+       android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        tools:listitem="@layout/formate_exercise"
+        android:layout_alignParentEnd="true"
         android:layout_height="match_parent"
         android:id="@+id/recycler_Exercise"/>
     <ProgressBar
