--- a/app/src/main/res/layout/formate_exercise.xml
+++ b/app/src/main/res/layout/formate_exercise.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ExerciseImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
