--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#262e39</color>
+    <color name="black">#040507</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#23A9E1</color>
     <color name="colorblack_4">#0A000000</color>
