--- a/app/src/main/res/layout/fragment_coaches.xml
+++ b/app/src/main/res/layout/fragment_coaches.xml
@@ -6,6 +6,28 @@
     android:background="@drawable/background_home"
     tools:context=".sport.SportsProperties.CoachesFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <EditText
+        android:id="@+id/search_Coach"
+        android:inputType="textAutoComplete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:textSize="20sp"
+        android:hint="@string/enter_the_sport_name"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:paddingStart="10dp"
+        android:drawableStart="@drawable/ic_nav_search"
+        android:drawablePadding="10dp"
+        android:background="@drawable/shapetext_r"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_Coaches"/>
+    </LinearLayout>
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
