--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,14 +7,50 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_home"
     tools:context=".Fragment.SprtsType.HomeFragment">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+       android:layout_height="wrap_content"
+       tools:ignore="MissingConstraints">
 
-       <androidx.recyclerview.widget.RecyclerView
+       <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:id="@+id/recycler_sports_categories"/>
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
+           <EditText
+               android:id="@+id/search_SportsCategory"
+               android:inputType="textAutoComplete"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_margin="15dp"
+               android:textSize="20sp"
+               android:hint="@string/enter_the_category_name"
+               android:textColor="@color/black"
+               android:textColorHint="@color/black"
+               android:paddingStart="10dp"
+               android:drawableStart="@drawable/ic_nav_search"
+               android:drawablePadding="10dp"
+
+               android:background="@drawable/shapetext_r"
+               android:layout_alignParentStart="true"
+               android:layout_alignParentEnd="true"
+               android:layout_alignParentTop="true"
+               />
+
+
+          <androidx.recyclerview.widget.RecyclerView
+              android:layout_alignParentBottom="true"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:id="@+id/recycler_sports_categories"
+              />
+      </LinearLayout>
+
+
+
+
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
@@ -23,6 +59,6 @@
            android:id="@+id/progres_sports_categories"
            android:visibility="gone"/>
    </RelativeLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
