--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="background">#262e39</color>
     <color name="porder">#23FFA7</color>
     <color name="darkeblue">#20305C</color>
+    <color name="red">#E14A54</color>
 
 
 </resources>
