--- a/app/src/main/res/layout/activity_regestration.xml
+++ b/app/src/main/res/layout/activity_regestration.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/background_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.Login">
+    tools:context=".ui.auth.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -167,7 +167,7 @@
 
                    android:layout_width="match_parent"
                    android:text="@string/trainee"
-                   android:textColor="@color/white"
+                   android:textColor="@color/black"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="20sp"
@@ -178,7 +178,7 @@
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/coach"
-                   android:textColor="@color/white"
+                   android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"/>
