--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Splash">
+    tools:context=".ui.SplashActivity">
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/imageView"
